# MEHCscheme

./: .gitignore  CMakeLists.txt  Example5_000000.mfem_root  LICENSE  README.md  clean.sh  codestructure.txt  compile.sh  compilerun.sh  compilerunclear.sh  dirichlet-cons-initcond-cos2.nb  dirichlet-cons-initcond-cos4.nb  dirichlet-cons-initcond.nb  dirichlet-conv-manufsol.nb  equivalence-of-terms.nb  ex1markus.cpp  ex9simple.cpp  initcond_curlcurl.nb  initcond_dirichlet_2D.nb  initcond_dirichlet_3D.nb  initcond_periodic_cons.nb  initcond_periodic_conv.nb  initial_cond.nb  initial_cond_dirichlet.nb  manufactured_sol.nb  manufactured_solution.nb  periodic-conv-manufsol.nb  run.sh
src/: BCissue.cpp  CMakeLists.txt  Euler_1stOrder_NonCons.cpp  assembly-blockmatrix-big.cpp  assembly-blockmatrix.cpp  assembly-blockoperator.cpp  assembly-sparse.cpp  assembly.cpp  curlcurl.cpp  dirichlet-cons.cpp  dirichlet-conv.cpp  dirichlet-decoupled-dual.cpp  dirichlet-decoupled-primal-cons.cpp  dirichlet-decoupled-primal.cpp  dirichlet.cpp  dirichlet_2spaces.cpp  dirichlet_3.cpp  dirichlet_3DPC.cpp  dirichlet_3_DPC.cpp  dirichlet_3_reduced.cpp  dirichlet_3spaces.cpp  dirichlet_4spaces.cpp  dirichlet_allspaces.cpp  dirichlet_dual.cpp  dirichlet_dual_decoupled_d.cpp  dirichlet_dual_decoupled_d2.cpp  dirichlet_dual_decoupled_p.cpp  dirichlet_dual_decoupled_p2.cpp  dirichlet_primal.cpp  eulerstep.cpp  ex1simple.cpp  ex1verysimple.cpp  ex5sim.cpp  ex5simple.cpp  glvis-forcing.cpp  glvis-initcond.cpp  initcond_v2.cpp  initcond_v3.cpp  mehc.cpp  mehcassembly-v1.cpp  (+8 more)
src/archive/: assembly-blockmatrix.cpp  assembly-blockoperator.cpp  assembly-old.cpp  assembly-sparse.cpp  assembly-transposed.cpp  dirichlet-decoupled-primal-cons.cpp  dirichlet_2spaces_v1.cpp  dirichlet_conv_0matrices.cpp  dirichlet_conv_v0.cpp  dirichlet_decoupled_FLS.cpp  dirichlet_decoupled_primal_v0.cpp  dirichlet_dual_decoupled_d.cpp  dirichlet_smallsys.cpp  eulerstep.cpp  ex11psimple.cpp  initcond.cpp  initcond_v1.cpp  initcond_v2.cpp  initcond_v3.cpp  initialcondition.cpp  periodic-dirichlet-test.cpp  periodic-outdated.cpp  periodic-v1.cpp  periodic-v2.cpp  periodic-v3.cpp  poeriodicconvold.cpp  submatrix.cpp  submatrix_transp.cpp  test-helicity.cpp
src/archive-oldBCcases/: dirichlet_primal.cpp
src/dirichlet-scenarios/: dirichlet_3.cpp  dirichlet_3DPC.cpp
src/examples/: ex1simple.cpp  ex5dirichlet.cpp  ex9simple.cpp
src/examples-edit/: ex1simple.cpp  ex5dirichlet.cpp  wouter_Euler1noncons.cpp
src/examples-edited/: ex16simple.cpp  ex1simple.cpp  ex3simple.cpp  ex5simple.cpp
(+41 files in other folders)
